--- a/Makefile.in
+++ b/Makefile.in
@@ -1,4 +1,10 @@
 prefix = @prefix@
 exec_prefix = @exec_prefix@
 
+SUBDIRS = src
+
 all:
+		for subdir in $(SUBDIRS); do \
+			(cd $$subdir && $(MAKE) $(MAKEDEFS) $@) || exit 1; \
+		done
+
